General        : Add new tool to perform OCR over scanned text.
                 https://community.kde.org/GSoC/2022/StatusReports/QuocHungTran
Maintenance    : Add Aesthetic Detection to classify images using deep learning model.
                 https://community.kde.org/GSoc/2022/StatusReports/PhuocKhanhLe

*****************************************************************************************************
BUGFIXES:

001 ==> 416704 - Port digiKam to Qt6 and KF6 API.
002 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
003 ==> 450518 - Crash when opening Advanced Search.
004 ==> 450467 - digiKam git source build fails.
005 ==> 450642 - Provide an option to open the light table after click on thumbnail.
006 ==> 450643 - Expose menus optionally in the toolbar : burger main menu feature.
007 ==> 451017 - Search by time of day.
008 ==> 349268 - Be able to copy and paste the uploaded url to ImgUr web service.
009 ==> 451525 - Maintenance tool dialog should not keep potentially destructive operations checked by default.
010 ==> 251424 - Include gpx overlays found in albums.
011 ==> 451802 - GPX files fails to load.
012 ==> 219856 - Exiv2 destroys RAW/DNG files when editing IPTC - Use ExifTool instead.
013 ==> 219856 - Exiv2 destroys RAW/DNG files when editing IPTC - Use ExifTool instead.
014 ==> 366348 - Saving metadata to video files using ExifTool.
015 ==> 377622 - IPTC metadata are not embedded in ORF files with Exiv2 - Use ExifTool instead.
016 ==> 338075 - Tagging RAW images for Canon EOS-1Ds with Exiv2 corrupts them - Use ExifTool instead.
017 ==> 419801 - XMP-digiKam:TagsList not read from video files with ExiV2 - Use ExifTool instead.
018 ==> 134486 - Keywords are not written by Exiv2 to raw files even though they do embed iptc/exif - Use ExifTool instead.
019 ==> 264210 - RAW (NEF) file unreadable after editing IPTC with Exiv2 - Use ExifTool instead.