@@ -144,11 +144,12 @@ void Task::run()
 
     // ItemInfo must be tread-safe.
 
-    ItemInfo source = ItemInfo::fromUrl(d->tools.m_itemUrl);
-    bool timeAdjust = false;
-    bool rmMetadata = false;
-    bool translate  = false;
-    bool imgqsort   = false;
+    ItemInfo source   = ItemInfo::fromUrl(d->tools.m_itemUrl);
+    bool timeAdjust   = false;
+    bool rmMetadata   = false;
+    bool translate    = false;
+    bool imgqsort     = false;
+    bool assignLabels = false;
 
     Q_FOREACH (const BatchToolSet& set, d->tools.m_toolsList)
     {
@@ -171,10 +172,11 @@ void Task::run()
 
         // Only true if it is also the last tool
 
-        timeAdjust |= (set.name == QLatin1String("TimeAdjust"));
-        rmMetadata |= (set.name == QLatin1String("RemoveMetadata"));
-        translate  |= (set.name == QLatin1String("Translate"));
-        imgqsort   |= (set.name == QLatin1String("QualitySort"));
+        timeAdjust   |= (set.name == QLatin1String("TimeAdjust"));
+        rmMetadata   |= (set.name == QLatin1String("RemoveMetadata"));
+        translate    |= (set.name == QLatin1String("Translate"));
+        imgqsort     |= (set.name == QLatin1String("QualitySort"));
+        assignLabels |= (set.name == QLatin1String("AssignLabels"));
 
         inUrl       = outUrl;
         index       = set.index + 1;
@@ -301,7 +303,7 @@ void Task::run()
                                              timeAdjust))
         {
             emitActionData(ActionData::BatchDone, i18n("Item processed successfully %1", renameMess),
-                           dest, (rmMetadata | timeAdjust | translate | imgqsort));
+                           dest, (rmMetadata | timeAdjust | translate | imgqsort | assignLabels));
         }
         else
         {
